<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">58SqliteDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_label">ID</string>
    <string name="add_label">추가</string>
    <string name="delete_label">삭제</string>
    <string name="modify_label">변경</string>
    <string name="no_memo">메모가 없습니다.</string>
</resources>
